src/test/resources/sysdesc/unittest/semanticerrors/SRT001/SRT001-2.alm
system description srt001
theory srt001
module srt001
   sort declarations
      subsort::integers
